--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                             <option value="ETH">Ethereum</option>
                             <option value="BCH">Bitcoin Cash</option>
                             <option value="DASH">Dash</option>
+                            <option value="FCT">Factom</option>
                         </select>
                     </div>
 
