- remove unwanted hash algo - user feedback

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>STAMPD.IO Blockchain Stamping</title>
+    <title>STAMPD.IO Blockchain Stamping v1.05</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/plugin.min.css">
 </head>
 <body>
@@ -48,7 +48,7 @@
                 </form>
             </div>
             <div class="tabs__content" data-tab-content="settings">
-                <p>Get your API credentials from <a href="https://stampd.io" target="_blank">stampd.io</a>.</p>
+                <p>Get your API credentials from your dashboard at <a href="https://stampd.io/dashboard" target="_blank">stampd.io</a>.</p>
                 <form class="js-form-credentials" data-parsley-validate="">
                     <div class="input">
                         <input name="client_id" placeholder="Client ID" type="text" class="input__el"
@@ -60,7 +60,8 @@
                     </div>
                     <button class="button button--default" type="submit">Save</button>
                 </form>
-
+                <p>Issues with the app? <a href="https://stampd.io/#/contact"
+                                           target="_blank">Contact us</a>.</p>
             </div>
         </div>
     </div>
